// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`add_volta (Snapshot) writes a first ending with a closed hook by default, on the first staff only 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Part id="2">
      <Staff id="2">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Trumpet</trackName>
      <Instrument id="bb-trumpet">
        <longName>Trumpet</longName>
        <shortName>Tpt.</shortName>
        <trackName>Trumpet</trackName>
        <minPitchP>52</minPitchP>
        <maxPitchP>85</maxPitchP>
        <minPitchA>52</minPitchA>
        <maxPitchA>80</maxPitchA>
        <transposeDiatonic>-1</transposeDiatonic>
        <transposeChromatic>-2</transposeChromatic>
        <instrumentId>brass.trumpet.bflat</instrumentId>
        <Channel>
          <program value="56"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Spanner type="Volta"><Volta><endHookType>1</endHookType><beginText>1.</beginText><endings>1</endings></Volta><next><location><measures>2</measures></location></next></Spanner><Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Spanner type="Volta"><prev><location><measures>-2</measures></location></prev></Spanner><Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    <Staff id="2">
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey><actualKey>-1</actualKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;

exports[`add_volta (Snapshot) writes an open second ending directly after the first 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Spanner type="Volta"><Volta><endHookType>1</endHookType><beginText>1.</beginText><endings>1</endings></Volta><next><location><measures>2</measures></location></next></Spanner><Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Spanner type="Volta"><prev><location><measures>-2</measures></location></prev></Spanner><Spanner type="Volta"><Volta><beginText>2.</beginText><endings>2</endings></Volta><next><location><measures>1</measures></location></next></Spanner><Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Spanner type="Volta"><prev><location><measures>-1</measures></location></prev></Spanner><Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;

exports[`add_volta (Snapshot) writes a closed hook on a second ending when hook is closed 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Spanner type="Volta"><Volta><endHookType>1</endHookType><beginText>2.</beginText><endings>2</endings></Volta><next><location><measures>1</measures></location></next></Spanner><Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Spanner type="Volta"><prev><location><measures>-1</measures></location></prev></Spanner><Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;

exports[`add_volta (Snapshot) anchors a volta ending on the final measure inside that measure 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>3</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Spanner type="Volta"><Volta><beginText>2.</beginText><endings>2</endings></Volta><next><location><measures>1</measures><fractions>3/4</fractions></location></next></Spanner><Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          <Spanner type="Volta"><prev><location><measures>-1</measures><fractions>-3/4</fractions></location></prev></Spanner></voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;
